--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
     "name": "GymRat",
-    "slug": "GymRat",
+    "slug": "gymrat",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "gymrat",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
