--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@expo/metro-runtime": "~3.2.1",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.14",
+    "@realm/react": "^0.8.0",
+    "expo": "~51.0.17",
+    "expo-asset": "~10.0.10",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.16",
+    "expo-router": "~3.5.17",
     "expo-splash-screen": "~0.27.5",
+    "expo-sqlite": "~14.0.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
@@ -38,8 +42,9 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
+    "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
-    "expo-sqlite": "~14.0.3"
+    "realm": "^12.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -47,7 +52,7 @@
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
