--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~51.0.17",
     "expo-asset": "~10.0.10",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "^4.0.19",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
@@ -51,6 +52,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "expo-module-scripts": "^3.5.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
