--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-dev-client": "^4.0.19",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.7",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.17",
     "expo-splash-screen": "~0.27.5",
@@ -39,6 +40,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
