Added types to ActiveWorkout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts", "utils/format.ts", "constants/icons.js", "app/(tabs)/_layout.tsx", "app/_layout.tsx", "app/(auth)/_layout.tsx", "components/DateSelecter.jsx", "app/(editor)/new-workout.jsx", "app/(workout)/active-workout.jsx", "constants/images.js", "constants/index.js",  ]
+    "expo-env.d.ts", "utils/format.ts", "constants/icons.js", "app/(tabs)/_layout.tsx", "app/_layout.tsx", "app/(auth)/_layout.tsx", "components/DateSelecter.jsx", "app/(editor)/new-workout.jsx", "app/(workout)/active-workout.tsx", "constants/images.js", "constants/index.js",  ]
 }
