--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-svg-transformer": "^1.4.0",
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
-    "realm": "^12.11.1"
+    "realm": "^12.11.1",
+    "expo-blur": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
