--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "devStart": "nodemon server.js"
   },
   "jest": {
     "preset": "jest-expo"
@@ -21,6 +22,7 @@
     "@realm/react": "^0.8.0",
     "expo": "~51.0.17",
     "expo-asset": "~10.0.10",
+    "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "^4.0.19",
     "expo-file-system": "~17.0.1",
@@ -33,6 +35,8 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -48,17 +52,18 @@
     "react-native-svg-transformer": "^1.4.0",
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
-    "realm": "^12.11.1",
-    "expo-blur": "~13.0.2"
+    "realm": "^12.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "dotenv": "^16.4.5",
     "expo-module-scripts": "^3.5.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "nodemon": "^3.1.4",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
