--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
     "@realm/react": "^0.8.0",
+    "axios": "^1.7.5",
+    "dotenv": "^16.4.5",
     "expo": "~51.0.17",
     "expo-asset": "~10.0.10",
     "expo-blur": "~13.0.2",
@@ -41,6 +43,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
